--- a/Jwt.API/appsettings.json
+++ b/Jwt.API/appsettings.json
@@ -1,4 +1,28 @@
 {
+  "ConnectionStrings": {
+    "sqlCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JwtDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "TokenOptions": {
+    "Audience": [ "www.authserver.com", "www.miniapi1.com", "www.miniapi2.com", "www.miniapi3.com" ],
+    "Issuer": "www.authserver.com",
+    "AccessTokenExpiration": 5,
+    "RefreshTokenExpiration": 600,
+    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
+  },
+  "Clients": [
+    {
+      "Id": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com" ]
+    },
+    {
+      "Id": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com", "www.miniapp4.com" ]
+    }
+  ],
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
